# Fashion-Data-Engine

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX_ISSUE_04.md  Makefile  PLAN.md  README.md  TASKS.md  alembic.ini  docker-compose.yml  mcp.json  openapi_gpt_actions.yaml  pyproject.toml  railway.json  railway.worker.json
agents/: CHANNEL_RESEARCH_DIRECTIVE.md  CHANNEL_RESEARCH_DIRECTIVE_2.md  FASHION_DANAWA_ROADMAP.md  INTEL_HUB_PHASE2_PLAN.md  PLAYBOOK.md  README.md  TASK_BRIEF_GEMINI_DB.md  TASK_BRIEF_GEMINI_DB_SPRINT1.md  TASK_BRIEF_GEMINI_DB_SPRINT2.md  TASK_DIRECTIVE.md  WORK_LOG.md  channel_research_results.md
agents/issues/: ADMIN_02_channel_traffic_light.md  CAFE24_CRAWL_FIX_01.md  CAFE24_SINGLE_BRAND_CRAWL_01.md  CAFE24_SOLDOUT_FILTER_01.md  CHANNEL_HEALTH_CLEANUP_01.md  CHANNEL_PROBE_01.md  CRAWLER_01_scheduler.md  CRAWLER_02_product_denylist.md  CRAWL_ERROR_TYPE_01.md  CRAWL_RATE_LIMIT_FIX_01.md  CRAWL_TIMEOUT_GUARD_01.md  CRAWL_WOOCOMMERCE_01.md  DB_01_zero_result_channels.md  FRONTEND_02_brand_autocomplete.md  FRONTEND_03_search_filter.md  FRONTEND_04_brand_detail.md  FRONTEND_05_price_history_chart.md  FRONTEND_06_infinite_scroll.md  INTEL_CRAWL_AUTO_TRIGGER_01.md  INTEL_DISCORD_ALERT_01.md  INTEL_HUB_DATA_MODEL_01.md  INTEL_HUB_DERIVED_EVENTS_01.md  INTEL_HUB_DERIVED_EVENTS_FIX_01.md  INTEL_HUB_FRONTEND_01.md  INTEL_HUB_SPRINT0_01.md  INTEL_NEWS_REALTIME_01.md  INTEL_SHOPIFY_DROP_DETECT_01.md  (+7 more)
alembic/: env.py
data/: brand_collabs.csv  brand_directors.csv  brand_enrichment.csv  brand_tiers.csv  channels_cleaned.csv  channels_flagged.csv  channels_global.csv  channels_input.csv
docs/: ARCHIVE.md  DEPLOYMENT.md  FASHION_INTEL_HUB_PRD_2026-03-02.md  channel_research_gpt.md  channel_research_report_2026-03-01.md  deep-research-report.md  fashion_intel_prd_review_v1_1_2026-03-02.md  plan.md  research.md
frontend/: .env.production  instrumentation-client.ts  instrumentation.ts  next.config.ts  nixpacks.toml  package-lock.json  package.json  railway.json
reports/: channel_probe_all_for_wc.csv  channel_probe_test.csv  null_platform_audit_2026-03-02.md  railway_crawl_verify_2026-03-02.md
scripts/: agent_coord.py  audit_price_data.py  auto_switch_parser.py  backfill_brand_ids.py  backfill_normalized_key.py  backup_db.py  build_product_catalog.py  channel_probe.py  classify_brands.py  cleanup_fake_brands.py  cleanup_mixed_brand_channel.py  cleanup_price_data.py  cleanup_route_products.py  coverage_report.py  crawl_brands.py  crawl_community.py  crawl_drops.py  crawl_news.py  crawl_products.py  data_audit.py  data_quality_report.py  deactivate_dead_channels.py  deactivate_inaccessible_channels.py  detect_platforms.py  dev_oneclick.sh  discover_channels.py  enrich_brands.py  fix_brand_mece.py  fix_null_brand_id.py  generate_embeddings.py  improve_normalized_key.py  ingest_intel_events.py  manage_partitions.py  migrate_sqlite_to_pg.py  preprocess_channels.py  probe_cafe24_channels.py  purge_fake_brands.py  reactivate_channels.py  recalculate_hype.py  reclassify_from_shopify_tags.py  (+16 more)
(+165 files in other folders)
