[project]
name = "fashion-data-engine"
version = "0.1.0"
description = "패션 판매채널·브랜드 데이터 엔진"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # DB / ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",       # SQLite async (로컬 개발)
    "asyncpg>=0.30.0",          # PostgreSQL async (프로덕션)
    # 데이터 처리
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.2.0",
    "python-slugify>=8.0.0",
    # 크롤러
    "playwright>=1.49.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",          # 재시도 로직
    "apscheduler>=3.10.4",
    # 유틸리티
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",             # CLI 출력
    "typer>=0.15.0",            # CLI 프레임워크
    "tldextract>=5.1.0",        # URL 도메인 추출
]

[project.scripts]
fashion = "fashion_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_engine"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
