[project]
name = "fashion-data-engine"
version = "3.0.0"
description = "패션 브랜드 LLM 병렬 검색 엔진"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # DB / ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",       # SQLite async (로컬 개발)
    "asyncpg>=0.30.0",          # PostgreSQL async (프로덕션)
    # 데이터 처리
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # LLM 클라이언트
    "openai>=1.68.2",
    "anthropic>=0.45.0",
    "google-generativeai>=0.8.0",
    # HTTP
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    # 유틸리티
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "tldextract>=5.1.0",        # URL 정규화
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_engine"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
