[project]
name = "fashion-data-engine"
version = "3.0.0"
description = "퍼스널 쇼퍼 — 브라우저 자동화 기반 AI 검색 취합"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # DB / ORM
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    # 브라우저 자동화
    "playwright>=1.49.0",
    # 데이터 처리
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    # 유틸리티
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.22",
    "tldextract>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fashion_engine"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]
